plugins {
    id 'java'
    id 'jacoco'
    id 'application'
}

group = 'com.gymconnect'
version = '1.0-SNAPSHOT'

application {
    mainClass = 'com.gymconnect.GymApplication'
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

repositories {
    mavenCentral()
    repositories.removeAll { repo ->
        repo instanceof MavenArtifactRepository && repo.url.toString().contains("10.3.3.7")
    }
}

dependencies {
    // Spring
    implementation 'org.springframework:spring-context:6.1.14'
    implementation 'org.springframework:spring-orm:6.1.14'
    implementation 'org.springframework:spring-tx:6.1.14'

    // Hibernate
    implementation 'org.hibernate.orm:hibernate-core:6.4.4.Final'

    // H2 Database
    implementation 'com.h2database:h2:2.2.224'

    // Logging
    implementation 'org.slf4j:slf4j-api:2.0.16'
    implementation 'ch.qos.logback:logback-classic:1.5.12'

    // Test
    testImplementation 'org.junit.jupiter:junit-jupiter:5.11.3'
    testImplementation 'org.mockito:mockito-core:5.14.2'
    testImplementation 'org.mockito:mockito-junit-jupiter:5.14.2'
    testImplementation 'org.springframework:spring-test:6.1.14'
}

test {
    useJUnitPlatform()
    finalizedBy jacocoTestReport
}

jacocoTestReport {
    dependsOn test
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/gymconnect/GymApplication.class',
                    'com/gymconnect/config/**'
            ])
        }))
    }
    reports {
        xml.required = true
        html.required = true
    }
}

jacocoTestCoverageVerification {
    afterEvaluate {
        classDirectories.setFrom(files(classDirectories.files.collect {
            fileTree(dir: it, exclude: [
                    'com/gymconnect/GymApplication.class',
                    'com/gymconnect/config/**'
            ])
        }))
    }
    violationRules {
        rule {
            limit {
                minimum = 0.80
            }
        }
    }
}

check.dependsOn jacocoTestCoverageVerification
